--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                             <tr class="forum-row alt-b">
                                 <td align="center"><div class="f-icon gold">👑</div></td>
                                 <td>
-                                    <div class="forum-title"><a href="#" onclick="switchView('leaderboard'); return false;">Holy CiG5 🤯 Hall of Fame</a></div>
-                                    <div class="forum-desc">The elite. Verified 1.74Gbps+ entries only.</div>
+                                    <div class="forum-title"><a href="#" onclick="switchView('leaderboard'); return false;">Holy CiG5 🤯</a></div>
+                                    <div class="forum-desc">Verified 1.74Gbps+ entries only.</div>
                                 </td>
                                 <td align="center">0</td>
                                 <td align="center">0</td>
@@ -194,7 +194,7 @@
                                 <td align="center"><div class="f-icon">🛠️</div></td>
                                 <td>
                                     <div class="forum-title"><a href="#" onclick="viewCategory('armory'); return false;">ARMORY</a></div>
-                                    <div class="forum-desc">Hardware showcase. Custom enclosures, cooling mods, HAT implementations.</div>
+                                    <div class="forum-desc">Hardware Showcase. Custom enclosures, cooling mods, HAT implementations.</div>
                                 </td>
                                 <td align="center" id="armory-threads">—</td>
                                 <td align="center" id="armory-posts">—</td>
