--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="forum-table" data-repos="ci5.network">
                     <div class="cat-header gold">
                         <span class="collapse-btn" onclick="toggleCategory(this)">[−]</span>
-                        🏆 St. Guinea CiG | Performance Arena
+                        🏆 Performance Arena
                     </div>
                     <div class="cat-body">
                         <table width="100%" cellpadding="0" cellspacing="1">
@@ -125,7 +125,7 @@
                             <tr class="forum-row alt-b">
                                 <td align="center"><div class="f-icon gold">👑</div></td>
                                 <td>
-                                    <div class="forum-title"><a href="#" onclick="switchView('leaderboard'); return false;">Holy CiG5 🤯</a></div>
+                                    <div class="forum-title"><a href="#" onclick="switchView('leaderboard'); return false;">Holy CiG5 🤯 [& St. Guinea Ci5 🐹🪽]</a></div>
                                     <div class="forum-desc">Verified 1.74Gbps+ entries only.</div>
                                 </td>
                                 <td align="center">0</td>
@@ -140,7 +140,7 @@
                 <div class="forum-table" data-repos="ci5.network,ci5">
                     <div class="cat-header">
                         <span class="collapse-btn" onclick="toggleCategory(this)">[−]</span>
-                        📚 Documentation & Announcements
+                        📚 Project Announcements
                     </div>
                     <div class="cat-body">
                         <table width="100%" cellpadding="0" cellspacing="1">
