--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ci5.network Community Forums</title>
+    <title>ci5.network: Forums</title>
     <link rel="stylesheet" href="static/style.css">
     <link rel="icon" type="image/png" href="https://ci5.run/static/signal.png">
 </head>
