--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ci5.network: Forums</title>
+    <title>ci5.network Community Forums</title>
     <link rel="stylesheet" href="static/style.css">
     <link rel="icon" type="image/png" href="https://ci5.run/static/signal.png">
 </head>
@@ -47,12 +47,6 @@
                 <a href="#" class="mobile-nav-link" data-view="leaderboard">Leaderboard</a>
                 <a href="#" class="mobile-nav-link" data-view="submit">Submit RRUL</a>
                 <a href="#" class="mobile-nav-link" data-view="blacklist">Blacklist</a>
-            </div>
-            <div class="mobile-nav-section">
-                <div class="mobile-nav-header">Ecosystem</div>
-                <a href="https://ci5.run" class="mobile-nav-link external">ci5.run</a>
-                <a href="https://ci5.host" class="mobile-nav-link external">ci5.host</a>
-                <a href="https://ci5.dev" class="mobile-nav-link external">ci5.dev</a>
             </div>
         </div>
     </div>
