--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <tr class="forum-row alt-b">
                                 <td align="center"><div class="f-icon gold">👑</div></td>
                                 <td>
-                                    <div class="forum-title"><a href="#" onclick="switchView('leaderboard'); return false;">Holy CiG5 🤯 [& St. Guinea Ci5 🐹🪽]</a></div>
+                                    <div class="forum-title"><a href="#" onclick="switchView('leaderboard'); return false;">"Holy Ci5 🤯" [& St. Guinea Ci5 🐹🪽]</a></div>
                                     <div class="forum-desc">Verified 1.74Gbps+ entries only.</div>
                                 </td>
                                 <td class="hide-mobile" align="center">0</td>
@@ -294,11 +294,11 @@
 
             <!-- ===== LEADERBOARD VIEW ===== -->
             <div class="view-panel hidden" id="view-leaderboard">
-                <div class="page-title">St. Guinea CiG — Performance Leaderboard</div>
-                <p class="page-desc">The 1.74Gbps Gauntlet. First verified submission claims eternal glory.</p>
+                <div class="page-title">Performance Leaderboard</div>
+                <p class="page-desc">1.74Gbps Gauntlet. First verified submission claims eternal glory 🐹🪽 </p>
 
                 <div class="forum-table">
-                    <div class="cat-header gold">🐹🪽 Holy CiG5 🤯 — Top Performers</div>
+                    <div class="cat-header gold">"Holy Ci5 🤯" - Top Performers</div>
                     <div class="table-scroll">
                         <table class="data-table" width="100%">
                             <tr class="thead-row">
