--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>ci5.network Community Forums</title>
     <link rel="stylesheet" href="static/style.css">
-    <link rel="icon" type="image/png" href="https://ci5.run/static/signal.png">
+    <link rel="icon" type="image/png" href="https://ci5.network/static/signal.png">
 </head>
 <body>
 
